# libtorch-examples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-linux.sh  build-macos.sh  main.cpp
.github/: cmake.yml
.github/workflows/: build-cmake-linux.yml  build-cmake-macos.yml
libtorch-examples/convnet/: CMakeLists.txt  main.cpp
libtorch-examples/convnet/include/: convnet.hpp  convnet_classifier.hpp
libtorch-examples/include/: cifar10.hpp  convnet_classifier.hpp  linear_regression.hpp  logistic_regression.hpp  mnist.hpp  multi_layered_perceptron.hpp  utils.hpp
libtorch-examples/linear-regression/: CMakeLists.txt  main.cpp
libtorch-examples/linear-regression/include/: linear_regression.hpp
libtorch-examples/logistic-regression/: CMakeLists.txt  main.cpp
libtorch-examples/logistic-regression/include/: logistic_regression.hpp
libtorch-examples/multi-layered-perceptron/: CMakeLists.txt  main.cpp
libtorch-examples/multi-layered-perceptron/include/: mlp.hpp  mlp_classifier.hpp
libtorch-examples/project1/: CMakeLists.txt  main.cpp
libtorch-examples/project1/include/: sample.hpp
torch-cpp/include/: linear_regression.hpp
